--- a/standaloneClient/latest_build/index.html
+++ b/standaloneClient/latest_build/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="Arras.io is a fan-made sequel of diep.io. Survive and shoot at others while keeping your own tank alive! Play the game at https://arras.io/.">
+    <meta name="description" content="balls">
     <meta name="robots" content="index, follow">
-    <meta property="og:image" content="//arras.io/favicon/96x96.png">
+    <meta property="og:image" content="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
-    <title>arras.io beta</title>
+    <title>carrassot</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
     <link rel="stylesheet" href="/main.css" />
-    <link rel="icon" type="image/png" sizes="96x96" href="//arras.io/favicon/96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="//arras.io/favicon/96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
     <link rel="manifest" href="/lib/json/manifest.json">
-    <meta name="msapplication-TileColor" content="#8abc3f">
-    <meta name="theme-color" content="#8abc3f">
+    <meta name="msapplication-TileColor" content="#FF7700">
+    <meta name="theme-color" content="#FF7700">
 </head>
 
 <body oncontextmenu="return false" id="mainBody">
@@ -26,13 +25,13 @@
         <div id="startMenuWrapper">
             <div id="startMenu">
                 <div id="twitterHolder" class="startMenuHolder">
-                  sex (gay)
+                  AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
                 </div>
                 <div class="startMenuHolder">
                     <div class="sliderHolder">
                         <div class="slider" id="startMenuSlidingContent">
-                            <center><img src="https://arras.io/favicon/96x96.png" /></center>
-                            <h1 id="gameName">arras.io beta</h1>
+                            <center><img src="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220" /></center>
+                            <h1 id="gameName">carrassot</h1>
                             <div id="serverName">
                                 <h4 class="nopadding">Connecting...</h4>
                             </div>
