🍿🏞 Checkpoint ./public/app.js:21793105/294 ./standaloneClient/latest_build/index.html:21793105/1

--- a/standaloneClient/latest_build/index.html
+++ b/standaloneClient/latest_build/index.html
@@ -101,7 +101,7 @@
                                 <tr>
                                     <td>
                                         <div>
-                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox"> Colord Health Bars</label>
+                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox"> Colored Health Bars</label>
                                         </div>
                                     </td>
                                 </tr>
