🚒👼 Checkpoint ./server/lib/definitions.js:21793105/2 ./standaloneClient/latest_build/index.html:21793105/16 ./public/index.html:21793105/62 ./public/app.js:21793105/124

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                                     </td>
                                     <td>
                                         <div>
-                                            <label><input id="optNoPointy" tabindex="-1" class="checkbox" type="checkbox"> Classic Traps</label>
+                                            <label><input id="optNoPointy" tabindex="-1" class="checkbox" type="checkbox" > Pointy Traps</label>
                                         </div>
                                     </td>
                                 </tr>
@@ -103,7 +103,7 @@
                                 <tr>
                                     <td>
                                         <div>
-                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox"> Colord Health Bars</label>
+                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox" > Green Health Bars</label>
                                         </div>
                                     </td>
                                 </tr>
