--- a/standaloneClient/latest_build/index.html
+++ b/standaloneClient/latest_build/index.html
@@ -82,7 +82,7 @@
                                     </td>
                                     <td>
                                         <div>
-                                            <label><input id="optNoPointy" tabindex="-1" class="checkbox" type="checkbox"> Classic Traps</label>
+                                            <label><input id="optNoPointy" tabindex="-1" class="checkbox" type="checkbox" checked> Classic Traps</label>
                                         </div>
                                     </td>
                                 </tr>
@@ -101,7 +101,7 @@
                                 <tr>
                                     <td>
                                         <div>
-                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox"> Colored Health Bars</label>
+                                            <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox" checked> Colored Health Bars</label>
                                         </div>
                                     </td>
                                 </tr>
