🐩🍂 Checkpoint ./public/index.html:21793105/54 ./public/lib/json/manifest.json:21793105/641 ./standaloneClient/latest_build/index.html:21793105/215 ./standaloneClient/latest_build/lib/json/manifest.json:21793105/215 ./public/changelog.md:21793105/208

--- a/standaloneClient/latest_build/index.html
+++ b/standaloneClient/latest_build/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="carrassot is a mod of arras.io, it adds new custom tanks and a boss to fight at the center!">
+    <meta name="description" content="carrassot is a mod of arras.io, it adds new custom tanks, a boss to fight at the center, insane custom shapes, an much more!">
     <meta name="robots" content="index, follow">
     <meta property="og:image" content="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
     <meta property="og:image:width" content="54">
