🐑💗 Checkpoint ./public/index.html:21793105/1438 ./public/app.js:21793105/1344 ./public/lib/config.js:21793105/77 ./server/modules/network/sockets.js:21793105/62

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,15 @@
                                             <label><input id="coloredHealthbars" tabindex="-1" class="checkbox" type="checkbox" > Green Health Bars</label>
                                         </div>
                                     </td>
+                                  
                                 </tr>
+                              <options_header>Basic Tank Skin:</options_header>
+                              <select id="optReskin" tabindex="-1">
+                                <option value="basic">Normal</option>
+                                <option value="donut">Donut</option>
+                                <option value="sharp">Sharp</option>
+                                <option value="farmer">Farmer</option>
+                            </select>
                             </table>
                         </div>
                     </div>
