🐔🏞 Checkpoint ./public/lib/config.js:21793105/220 ./server/modules/network/config.js:21793105/133 ./server/modules/network/sockets.js:21793105/264 ./public/app.js:21793105/182 ./public/index.html:21793105/232

--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,7 @@
     <!-- JS -->
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="module" src="./lib/config.js"></script>
+    <script type="module" src="./modules/network/config.js"></script>
     <script type="module" src="./lib/color.js"></script>
     <script type="module" src="./lib/global.js"></script>
     <script type="module" src="./lib/util.js"></script>
