🌘⚾️ Checkpoint ./server/modules/network/sockets.js:21793105/155 ./server/lib/definitions.js:21793105/860 ./public/changelog.md:21793105/379 ./public/index.html:21793105/38 ./public/lib/socketInit.js:21793105/199

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                                 <h4 class="nopadding">Connecting...</h4>
                             </div>
                             <table id="serverSelector" style="display:none;"></table>
-                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="This is the tale of:" id="playerNameInput" maxlength="24" />
+                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="Your name sir?:" id="playerNameInput" maxlength="100" />
                             <input type="text" class="conceal" tabindex="3" placeholder="Token required." id="playerKeyInput" maxlength="64" />
                         </div>
                         <div class="slider" id="startMenuSlidingTrigger">
