--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="carrassot is a mod of arras.io, it adds new custom tanks, a boss to fight at the center, insane custom shapes, an much more!">
+    <meta name="description" content="Arrasrooms is a new backrooms. Welcome to your worst nightmare.">
     <meta name="robots" content="index, follow">
-    <meta property="og:image" content="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
+    <meta property="og:image" content="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
-    <title>carrassot</title>
+    <title>Arrasrooms</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
     <link rel="stylesheet" href="/main.css" />
-    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot.png?v=1653855270220">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
     <link rel="manifest" href="/lib/json/manifest.json">
     <meta name="msapplication-TileColor" content="#FF7700">
     <meta name="theme-color" content="#FF7700">
@@ -31,13 +31,13 @@
                 <div class="startMenuHolder">
                     <div class="sliderHolder">
                         <div class="slider" id="startMenuSlidingContent">
-                            <center><img src="https://cdn.glitch.global/5d8fe1d6-9e9a-4092-b336-15778a00cda4/carrassot96x96.png?v=1653855833916" /></center>
-                            <h1 id="gameName">carrassot</h1>
+                            <center><img src="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627" /></center>
+                            <h1 id="gameName">Arrasrooms</h1>
                             <div id="serverName">
                                 <h4 class="nopadding">Connecting...</h4>
                             </div>
                             <table id="serverSelector" style="display:none;"></table>
-                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="Your name sir?:" id="playerNameInput" maxlength="100" />
+                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="Your name?" id="playerNameInput" maxlength="100" />
                             <input type="text" class="conceal" tabindex="3" placeholder="Token required." id="playerKeyInput" maxlength="64" />
                         </div>
                         <div class="slider" id="startMenuSlidingTrigger">
