--- a/public/index.html
+++ b/public/index.html
@@ -120,15 +120,9 @@
                     <div id="patchNotes" class="shadowScroll"></div>
                 </div>
                 <div id="bottomHolder">
-                    <h5 class="nopadding" style="margin:0; display:inline">Help support the dev: </h5>
-                    <form action="https://www.patreon.com/arras_dev" method="post" target="_top">
-                        <input id="pledge" type="submit" value="Patreon!">
-                    </form>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="YJ42X4KU6ETPA">
-                        <input id="donate" type="submit" value="Paypal!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    <h5 class="nopadding" style="margin:0; display:inline">Contact us</h5>
+                    <form action="https://discord.gg/NgchR7F5/" method="post" target="_top">
+                        <input id="pledge" type="submit" value="Discord Server!">
                     </form>
                 </div>
             </div>
