🌘🖇 Checkpoint ./public/index.html:34581100/55

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div id="bottomHolder">
                     <h5 class="nopadding" style="margin:0; display:inline">Contact us</h5>
-                    <form action="https://discord.gg/NgchR7F5/" method="post" target="_top">
+                    <form action="https://discord.gg/au63xsws" method="post" target="_top">
                         <input id="pledge" type="submit" value="Discord Server!">
                     </form>
                 </div>
