🖐🐢 Checkpoint ./public/index.html:34581100/976 ./public/app.js:34581100/571

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,10 @@
                                 <option value="badlands">Badlands (Fan-made)</option>
                                 <option value="bleach">Bleach (Fan-made)</option>
                             </select>
+                            <select id="optMobile" tabindex="-1">
+                            <option value="joysticks">Joysticks</option>
+                            <option value="desktop">Desktop</option>
+                          </select>
                             <select id="optBorders" tabindex="-1">
                                 <option value="normal">Soft Borders</option>
                                 <option value="dark">Dark Borders</option>
