🍊🏗️ Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="description" content="Arrasrooms is a new backrooms. Welcome to your worst nightmare.">
     <meta name="robots" content="index, follow">
-    <meta property="og:image" content="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
+    <meta property="og:image" content="https://cdn.glitch.global/8c99d223-7ed7-4205-8597-2777b7d75d91/arrasroomslogo%20(1).png?v=1675248274397">
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
     <title>Arrasrooms</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
     <link rel="stylesheet" href="/main.css" />
-    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://cdn.glitch.global/8c99d223-7ed7-4205-8597-2777b7d75d91/arrasroomslogo%20(1).png?v=1675248274397">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/8c99d223-7ed7-4205-8597-2777b7d75d91/arrasroomslogo%20(1).png?v=1675248274397">
     <link rel="manifest" href="/lib/json/manifest.json">
     <meta name="msapplication-TileColor" content="#FF7700">
     <meta name="theme-color" content="#FF7700">
@@ -26,26 +26,27 @@
         <div id="startMenuWrapper">
             <div id="startMenu">
                 <div id="twitterHolder" class="startMenuHolder">
-                  Whats supposed to go here again?
+                  Developer's New Video
+                  <iframe width="560" height="157.5" src="https://www.youtube.com/embed/4YsVrPoNWxk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  Gira R
+                  <iframe width="560" height="157.5" src="https://www.youtube.com/embed/9P26x310ghw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="startMenuHolder">
                     <div class="sliderHolder">
                         <div class="slider" id="startMenuSlidingContent">
-                            <center><img src="https://cdn.glitch.global/066ba826-ca6f-4b05-8161-4c0e906c4e32/6796bbeb-0121-4ace-bf9a-b0f6812522db.image.png?v=1670695025627" /></center>
+                            <center><img src="https://cdn.glitch.global/8c99d223-7ed7-4205-8597-2777b7d75d91/arrasroomslogoreal.png?v=1675248797751" /></center>
                             <h1 id="gameName">ArrasBackrooms</h1>
                             <div id="serverName">
                                 <h4 class="nopadding">Connecting...</h4>
                             </div>
-                            <table id="serverSelector" style="display:none;"></table>
                             <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="Your name?" id="playerNameInput" maxlength="100" />
-                            <input type="text" class="conceal" tabindex="3" placeholder="Token required." id="playerKeyInput" maxlength="64" />
+                            <input type="text" class="conceal" tabindex="3" placeholder="Token(Do not enter if you're not a beta tester.)" id="playerKeyInput" maxlength="64" />
                         </div>
                         <div class="slider" id="startMenuSlidingTrigger">
                             <h3 class="nopadding">view options/help 🡲</h3>
                         </div>
                         <div class="slider">
-                            <br>
-                            <options_header>Advanced Controls:</options_header><br>
+                            <br>                            <options_header>Advanced Controls:</options_header><br>
                             <table>
                                 <tr>
                                     <td><b>E</b>: auto-fire</td>
@@ -62,12 +63,12 @@
                                 <option value="dark">Dark Colors</option>
                                 <option value="natural">Natural</option>
                                 <option value="classic">Classic</option>
-                                <option value="forest">Forest (Fan-made)</option>
-                                <option value="midnight">Midnight (Fan-made)</option>
-                                <option value="pastel">Snow (Fan-made)</option>
-                                <option value="ocean">Coral Reef (Fan-made)</option>
-                                <option value="badlands">Badlands (Fan-made)</option>
-                                <option value="bleach">Bleach (Fan-made)</option>
+                                <option value="forest">Forest</option>
+                                <option value="midnight">Midnight</option>
+                                <option value="pastel">Snow</option>
+                                <option value="ocean">Coral Reef</option>
+                                <option value="badlands">Badlands</option>
+                                <option value="bleach">Bleach</option>
                             </select>
                             <select id="optMobile" tabindex="-1">
                             <option value="joysticks">Joysticks</option>
@@ -125,7 +126,7 @@
                 </div>
                 <div id="bottomHolder">
                     <h5 class="nopadding" style="margin:0; display:inline">Contact us</h5>
-                    <form action="https://discord.gg/vWnesBfS" method="post" target="_top">
+                    <form action="https://discord.gg/2W67BkMtTw" method="post" target="_top">
                         <input id="pledge" type="submit" value="Discord Server!">
                     </form>
                 </div>
